--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,6 @@
-# Environment variables
 .env
-
-# Python
 __pycache__/
-*.py[cod]
-*$py.class
-
-# Virtual Environment
-venv/
-env/
-.env/
-
-# Logs
+*.pyc
+.DS_Store
 logs/
 *.log
-
-# IDE
-.vscode/
-.idea/
-*.swp
-
-# OS
-.DS_Store
-Thumbs.db
